PN-11842 Feat: Fixed cs-role always required in header (#179)
