# src/main/java/it/pagopa/pn/radd/rest/radd/fsu/DocumentOperationsRestV1Controller.java
@@ -43,7 +43,7 @@ public class DocumentOperationsRestV1Controller implements DocumentOperationsApi
     }
 
     @Override
-    public Mono<ResponseEntity<DocumentUploadResponse>> documentUpload(CxTypeAuthFleet xPagopaPnCxType, String xPagopaPnCxId, String xPagopaPnCxRole, String uid, Mono<DocumentUploadRequest> documentUploadRequest, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<DocumentUploadResponse>> documentUpload(CxTypeAuthFleet xPagopaPnCxType, String xPagopaPnCxId, String uid, Mono<DocumentUploadRequest> documentUploadRequest, String xPagopaPnCxRole, ServerWebExchange exchange) {
         return documentOperationsService.createFile(documentUploadRequest,xPagopaPnCxRole).map(m -> ResponseEntity.status(HttpStatus.OK).body(m));
     }
 }
